--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
         android:id="@+id/textView"
         android:layout_width="254dp"
         android:layout_height="68dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="73dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="enter name"
         android:inputType="text"
@@ -20,22 +20,25 @@
 
     <EditText
         android:id="@+id/editTextTextPassword"
-        android:layout_width="254dp"
-        android:layout_height="71dp"
-        android:layout_marginTop="28dp"
+        android:layout_width="263dp"
+        android:layout_height="82dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="22dp"
         android:ems="10"
         android:hint="enter pin"
         android:inputType="numberPassword"
-        app:layout_constraintStart_toStartOf="@+id/editTextText"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:ignore="UnknownId" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="24dp"
+        android:onClick="clickHandler"
         android:text="login"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
 </androidx.constraintlayout.widget.ConstraintLayout>
