--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="enter name"
+        android:hint="@string/hint_entername"
         android:inputType="text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,7 +25,7 @@
         android:layout_marginStart="7dp"
         android:layout_marginTop="22dp"
         android:ems="10"
-        android:hint="enter pin"
+        android:hint="@string/hint_enterpin"
         android:inputType="numberPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
@@ -38,7 +38,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="24dp"
         android:onClick="clickHandler"
-        android:text="login"
+        android:text="@string/login_label"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
 </androidx.constraintlayout.widget.ConstraintLayout>
