--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,41 +4,67 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#A4B0BF"
     tools:context=".MainActivity">
 
     <EditText
-        android:id="@+id/textView"
-        android:layout_width="254dp"
-        android:layout_height="68dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:id="@+id/editTextText"
+        android:layout_width="@dimen/myedittextwidth"
+
+        android:layout_height="wrap_content"
+        android:layout_marginStart="46dp"
+        android:layout_marginTop="68dp"
         android:ems="10"
         android:hint="@string/hint_entername"
         android:inputType="text"
+        android:textColor="@color/mycolor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- this color is defined in my apps colors.xml
+    android:textColor="@color/mycolor"
+-->
     <EditText
         android:id="@+id/editTextTextPassword"
-        android:layout_width="263dp"
-        android:layout_height="82dp"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="22dp"
+        android:layout_width="@dimen/myedittextwidth"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="27dp"
         android:ems="10"
         android:hint="@string/hint_enterpin"
         android:inputType="numberPassword"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:ignore="UnknownId" />
+        app:layout_constraintStart_toStartOf="@+id/editTextText"
+        app:layout_constraintTop_toBottomOf="@+id/editTextText" />
 
+    <!--these colors are defined in android os
+    android:textColor="@android:color/holo_blue_light"-->
+
+
+    <!--
+ dp = density independent pixels
+-->
     <Button
         android:id="@+id/button"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="31dp"
+        android:text="@string/login_label"
+        android:onClick="clickHandler"
+        android:textColor="@android:color/holo_blue_light"
+        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
+
+    <!--
+        sp = scale independent pixels
+    -->
+
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="24dp"
-        android:onClick="clickHandler"
-        android:text="@string/login_label"
+        android:layout_marginStart="51dp"
+        android:layout_marginTop="39dp"
+        android:textSize="25sp"
+        android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
